--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
         <title>Scores Game</title>
     </head>
     <body>
-        <h1>The score is <div id="score">{SCORE}</div></h1>
+        <h1>The score is <div id="score">{{SCORE}}</div></h1>
     </body>
 </html>
